--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -19,6 +19,7 @@
     transition: all 0.3s ease !important;
     -webkit-transition: all 0.3s ease !important;
     -moz-transition: all 0.3s ease !important;
+    background-color: blue;
 }
 
 #chat-messages{
@@ -70,7 +71,7 @@
 .remote-video{
     width:100%;
     height:auto;
-    max-height: 90vh;
+    max-height: 70vh;
 }
 
 
@@ -93,12 +94,18 @@
 
 
 .local-video{
+    margin: 20px 20px;
     bottom: 0;
     left: 0;
     position: fixed;
     width:15vw;
 }
 
+.transcript-container{
+    bottom:0;
+    left:20%;
+    position:fixed;
+}
 
 .mirror-mode{
     -ms-transform: scaleX(-1);
@@ -118,8 +125,8 @@
 .msg{
     font-weight: 400;
     font-size: 12px;
-    color: black;
-    background-color: wheat;
+    color:white;
+    background-color: white;
 }
 
 
@@ -183,6 +190,35 @@
     width: 80%;
 }
 
+/**/
+
+
+#transcript {
+    margin: 3px 0;
+    white-space: pre-wrap;
+}
+
+#start-button,
+#stop-button {
+    margin: 0px 0;
+}
+
+#error {
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1.4rem;
+    border-radius: 5px 5px 5px 5px;
+    color: #D8000C;
+    background-color: #FFD2D2;
+    display: none;
+}
+
+.isa_error i {
+    margin: 2px 12px;
+    font-size: 1.5em;
+    vertical-align: middle;
+}
 
 @keyframes animatetop {
     from {top: -300px; opacity: 0}
